Basic_node: create Redis cache for market providers